--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: clojure
-after_script:
-  - bash -ex script/coveralls.sh
+notifications:
+    slack: orionsbelt-game:QT4unoZGVBOvbSWiil1o1bm0
