--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: clojure
 env: OBB_SCENARIOS_TO_TEST=10
+lein: lein2
+script: lein all
 notifications:
   slack: orionsbelt-game:QT4unoZGVBOvbSWiil1o1bm0
 jdk:
