--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: clojure
 env: OBB_SCENARIOS_TO_TEST=10
 lein: lein2
-script: lein all
+script: lein test
 jdk:
   - oraclejdk8
 after_script:
