--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: clojure
 env: OBB_SCENARIOS_TO_TEST=10
+install:
+- wget -O boot https://github.com/boot-clj/boot/releases/download/2.0.0-rc9/boot.sh
+- chmod 755 boot
+- ./boot -V
 lein: lein2
-script: lein all
+script: lein test && ./boot test-clj && ./boot test-cljs
 jdk:
   - oraclejdk8
 after_script:
