--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: clojure
 env:
   global:
     - OBB_SCENARIOS_TO_TEST=10
-    - BOOT_CLOJURE_VERSION=1.7.0-RC2
-install:
-- wget -O boot https://github.com/boot-clj/boot/releases/download/2.1.2/boot.sh
-- chmod 755 boot
-- ./boot -V
-script: ./boot test-clj && ./boot test-cljs
+lein: lein2
+script: lein test && lein with-profile cljs cljsbuild test
 jdk:
   - oraclejdk8
 after_script:
